objects/NHM_Master__c.object
<CustomObject>
    <fields>
        <fullName>NHM_ALIAS_LIST__c</fullName>
        <label>NHM_ALIAS_LIST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NHM_BUILDING__c</fullName>
        <label>NHM_BUILDING</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_CCMS_ACCESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NHM_CCMS_ACCESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHM_CC_LIST__c</fullName>
        <label>NHM_CC_LIST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_DEPARTMENT__c</fullName>
        <label>NHM_DEPARTMENT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_EMP_FIRST_NAME__c</fullName>
        <label>NHM_EMP_FIRST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_EMP_LAST_NAME__c</fullName>
        <label>NHM_EMP_LAST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_EMP_NAME__c</fullName>
        <label>NHM_EMP_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_EMP_NUM__c</fullName>
        <label>NHM_EMP_NUM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_EMP_STATUS__c</fullName>
        <label>NHM_EMP_STATUS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_EMP_TITLE__c</fullName>
        <label>NHM_EMP_TITLE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_Flag__c</fullName>
        <label>NHM_Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_GID__c</fullName>
        <label>NHM_GID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NHM_JIRA_ACCESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NHM_JIRA_ACCESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHM_LOCATION__c</fullName>
        <label>NHM_LOCATION</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_LOGIN__c</fullName>
        <label>NHM_Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_MANAGER_EXT__c</fullName>
        <label>NHM_MANAGER_EXT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_MANAGER_LOCATION__c</fullName>
        <label>NHM_MANAGER_LOCATION</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_MANAGER_LOGIN__c</fullName>
        <label>NHM_MANAGER_LOGIN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_MANAGER__c</fullName>
        <label>NHM_MANAGER</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_MasterAvailable_Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NHM_MasterAvailable_Space</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.NHM_MasterBuilding__c</field>
                <operation>equals</operation>
                <valueField>$Source.NHM_MasterBuilding__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.NHM_MasterFloor__c</field>
                <operation>equals</operation>
                <valueField>NHM_Available_Space__c.NHM_Office_Floor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NHM_Available_Space__c</referenceTo>
        <relationshipLabel>NHM_Masters</relationshipLabel>
        <relationshipName>NHM_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NHM_MasterBuilding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NHM_MasterBuilding</label>
        <referenceTo>NHM_Building__c</referenceTo>
        <relationshipLabel>NHM_Masters</relationshipLabel>
        <relationshipName>NHM_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NHM_MasterFloor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NHM_MasterFloor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.NHM_MasterBuilding__c</field>
                <operation>equals</operation>
                <valueField>NHM_Floor__c.NHMBuilding__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NHM_Floor__c</referenceTo>
        <relationshipLabel>NHM_Masters</relationshipLabel>
        <relationshipName>NHM_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NHM_NAMEPLATE__c</fullName>
        <defaultValue>true</defaultValue>
        <label>NHM_NAMEPLATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHM_N_PHONE_EXTENSION__c</fullName>
        <label>NHM_N_PHONE_EXTENSION</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_N_PHONE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NHM_N_PHONE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHM_OFFICE_NUM__c</fullName>
        <label>NHM_OFFICE_NUM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_OFFICE_TYPE__c</fullName>
        <label>NHM_OFFICE_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_PASSWORD_TO__c</fullName>
        <label>NHM_PASSWORD_TO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_PASSWORD__c</fullName>
        <label>NHM_PASSWORD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_PHONE_TYPE__c</fullName>
        <label>NHM_PHONE_TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_REFEREDBY__c</fullName>
        <label>NHM_REFEREDBY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_REHIRE__c</fullName>
        <label>NHM_REHIRE</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_SIEBELDESC__c</fullName>
        <label>NHM_SIEBELDESC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NHM_SIEBEL__c</fullName>
        <label>NHM_SIEBEL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_SITE__c</fullName>
        <label>NHM_SITE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHM_STARTDATE__c</fullName>
        <label>NHM_STARTDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NHM_SUBMITDATE__c</fullName>
        <label>NHM_SUBMITDATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NHM_TENSILICA_ACCESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NHM_TENSILICA_ACCESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NHM_TICKETLIST__c</fullName>
        <label>NHM_TICKETLIST</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NHM_UID__c</fullName>
        <label>NHM_UID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NHM_Master</label>
    <nameField>
        <label>NHM_Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NHM_Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>